Resolve the issue with immutable list bug in the update method of the Purchase and Order Entities